@@ -1,5 +1,12 @@
 2008-08-01  Dan Williams  <dcbw@redhat.com>
 
+	* src/applet.c
+		- (nma_menu_add_devices): count unavailable and unmanaged wireless
+			devices when building the menu, but not when determining whether
+			to show other wireless related menu items
+
+2008-08-01  Dan Williams  <dcbw@redhat.com>
+
 	* src/gconf-helpers/gconf-upgrade.c
 	  src/gconf-helpers/gconf-upgrade.h
 		- (nm_gconf_migrate_0_7_ip4_method): Update ipv4 method names to match
